// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link changes the class when hovered 1`] = `
<a
  className="normal"
  href="https://www.metafaux.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Metafaux
</a>
`;

exports[`Link changes the class when hovered 2`] = `
<a
  className="hovered"
  href="https://www.metafaux.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Metafaux
</a>
`;

exports[`Link changes the class when hovered 3`] = `
<a
  className="normal"
  href="https://www.metafaux.com"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Metafaux
</a>
`;
